# mini-agent-core

./: .env.example  .gitignore  README.md  pyproject.toml
config/: agent.yaml  agent.yaml.example  agents.yaml.example  mcp.yaml  mcp.yaml.example  models.yaml  models.yaml.example  providers.yaml  providers.yaml.example  quickstart.yaml.example  tools.yaml  tools.yaml.example  voice.yaml  voice.yaml.example
docs/: Agent与扩展.md  ROS2接入.md  configuration.md  quickstart.md  skills.md  快速开始.md  模型示例参考.md  配置指南.md
edge/: README.md
examples/: edge_http_tool_demo.py  provider_quickstart.py  text_chat_demo.py  text_deepseek_demo.py  text_kimi_demo.py  text_qwen_demo.py  text_tool_demo.py  voice_dummy_demo.py  voice_openai_demo.py
mini_agent/: __init__.py  builtin_tools.py  cli.py
tests/: test_agent_loop.py  test_chinese_comments_present.py  test_cli_text_command.py  test_cli_text_status.py  test_config_profile.py  test_confirm_url_security.py  test_dangerous_shell_not_default.py  test_fetch_url_security.py  test_fetch_url_tool.py  test_final_core_experience.py  test_guard.py  test_init_config.py  test_mcp_config.py  test_mcp_list_command.py  test_model_registry.py  test_models_example_no_hardcoded_default.py  test_no_secret_committed.py  test_openai_compatible.py  test_provider_no_default_model.py  test_providers_config.py  test_session.py  test_skills_registry.py  test_status_events.py  test_stt_tts_factory.py  test_tool_errors.py  test_tool_schema.py  test_tools_default_online.py  test_tools_list_command.py  test_voice_pipeline.py  test_weather_tool.py  (+1 more)
(+73 files in other folders)
