[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-agent-core"
version = "0.1.0"
description = "A lightweight reusable AI Agent kernel template."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.25",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
voice = ["sounddevice>=0.4", "webrtcvad>=2.0"]

[tool.setuptools.packages.find]
include = ["mini_agent*"]

